...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subNoteDetails"
            android:theme="@style/SCBSwitch"/>
    </LinearLayout>

    <Button
        android:id="@+id/deleteSubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteSubscription"
        android:text="@string/delete_sub_bttn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
